@@ -3014,3 +3014,8 @@ DF.Dates$x2 <- c(1:6, NA)
 ## now, NA's show fine:
 summary(DF.Dates)
 ## 2 of 4  summary(.) above did not show NA's  in R <= 3.2.3
+
+
+## str.default() for "AsIs" arrays
+str(I(m <- matrix(pi*1:4, 2)))
+## did look ugly (because of toString() for numbers) in R <= 3.3.1
