@@ -125,6 +125,8 @@
       objects \code{D}, even when \dQuote{time goes backward}, e.g.,
       with decreasing \code{xlim}.  (Reported by William May.)
 
+      \item \code{str(I(matrix(..)))} now looks as always intended.
+
       \item \code{plot.ts()}, the \code{plot()} method for time series,
       now respects \code{cex}, \code{lwd} and \code{lty}.  (Reported by
       Greg Werbin.)
